--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
     })();
 </script>
 <!-- /WhatsHelp.io widget -->
+<!-- InstaWidget -->
+<a href="https://instawidget.net/v/user/khairunnisa6622" id="link-895750631cdf77d3e93cfe67354fcf73fb56302fdf7d038ac8cef57181186358">@khairunnisa6622</a>
+<script src="https://instawidget.net/js/instawidget.js?u=895750631cdf77d3e93cfe67354fcf73fb56302fdf7d038ac8cef57181186358&width=100px"></script>
     </body>
 
 </html> 
