--- a/index.html
+++ b/index.html
@@ -59,6 +59,24 @@
             <li> [bulan ini] dapatkan diskon menarik setiap pembelian diatas 200rb</li>
         </ul>
         <!-- end promo -->
+        <figure class="snip1584"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample87.jpg" alt="sample87"/>
+            <figcaption>
+              <h3>Burgundy Flemming</h3>
+              <h5>Advertising</h5>
+            </figcaption><a href="#"></a>
+          </figure>
+          <figure class="snip1584 hover"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample119.jpg" alt="sample119"/>
+            <figcaption>
+              <h3>Nigel Nigel</h3>
+              <h5>Sound &amp; Vision</h5>
+            </figcaption><a href="#"></a>
+          </figure>
+          <figure class="snip1584"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample120.jpg" alt="sample120"/>
+            <figcaption>
+              <h3>Caspian Bellevedere</h3>
+              <h5>Accounting</h5>
+            </figcaption><a href="#"></a>
+          </figure>
 
         <!-- start testimonali -->
         <h4>testimonial</h4>
